--- a/index.html
+++ b/index.html
@@ -21,7 +21,32 @@
     <div id="preloadder">
     </div>
 
-    <header class="primary-header" id="header-placeholder"></header>
+    <header class="primary-header">
+        <div class="left-part">
+            <a href="index.html">
+              <img src="public/images/logo/mountain.png" alt="" />
+              <div class="logo">
+                <h1>Kazbegi</h1>
+              </div>
+            </a>
+          </div>
+          <div class="right-part">
+            <div class="navbar">
+              <ul>
+                <li><a class="active" href="index.html">Home</a></li>
+                <li><a href="sights.html">Sights</a></li>
+                <li><a href="footage.html">Footage</a></li>
+                <li><a href="tours.html">Tours</a></li>
+                <li><a href="contact.html">Contact</a></li>
+              </ul>
+            </div>
+            <div class="ham-menu">
+              <div class="line line-1"></div>
+              <div class="line line-2"></div>
+              <div class="line line-3"></div>
+            </div>
+          </div>
+    </header>
 
     <main>
         <section class="banner" id="banner">
